# data-pipeline-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/demo/: __init__.py  api_to_snowflake_pipeline.py  s3_monitoring.py  sample_data_pipeline.py
local/: __init__.py  cli.py
src/config/: __init__.py  db.py  postgres.py  settings.py  snowflake.py
src/utils/: __init__.py  api_utils.py  encryption.py  s3_utils.py  snowflake_utils.py
tests/: __init__.py
tests/unit/: __init__.py  test_api_pipeline.py  test_encryption.py  test_settings.py
